tests/custom/STARIS_2022/operation-type-errors/apart-type-error/stderr.expected
Error:
    apart-type-error.essence:2:21:
  |
2 | such that b = apart(1, 3)
  |                     ^
Type error:
	Expected: set of ?
	Got: int

apart-type-error.essence:2:24:
  |
2 | such that b = apart(1, 3)
  |                        ^
Type error:
	Expected: partition from ?
	Got: int

cat: *.solution: No such file or directory
